fixed bug in uploading files on iphone

--- a/static/logged_in/logged-in.css
+++ b/static/logged_in/logged-in.css
@@ -778,7 +778,7 @@ div.file-wrap > input[type="file"] {
   height: 175px;
   top: 57px;
   left: 0;
-  z-index: 999;
+  z-index: 999999;
 }
 
 div.file-wrap > svg {
